refactor(aiqgen): read handbook excerpts from a transient gitignored cache
Copyright stance: stop vendoring the DMV handbook. RunbookExcerpts now reads a
per-sub-topic excerpt from a gitignored cache dir (apps/api/handbook-cache, or
HANDBOOK_CACHE_DIR) — one <SUB_TOPIC_CODE>.txt per sub-topic — instead of slicing
hardcoded line ranges out of a committed handbook. A refresh just overwrites the
cache; nothing downstream changes, and it works for any exam (code is the key,
exams use distinct prefixes e.g. CAC_).

Removes the vendored docs/dmv-m1-handbook.{pdf,md}. The generated questions
(committed as migrations) are the only persisted artifact.

Next: parameterize the gen/judge prompts by exam (drop hardcoded M1 wording),
then populate the cache + generate the CA-C bank.

419 tests green, JaCoCo met.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>